--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: (EM)^2 Research Group
+subtitle: (EM)^2 = (Electron Microscopy) x (Extreme Materials) 
 ---
