--- a/test.html
+++ b/test.html
@@ -1,3 +1,8 @@
+---
+title: Contact me
+subtitle: Here you'll find all the ways to get in touch with me
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
