--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: (EM)^2
-subtitle: (Electron Microscopy) x (Extreme Materials) 
+#title: (EM)^2
+#subtitle: (Electron Microscopy) x (Extreme Materials) 
 ---
