--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: minimal
+layout: page
 #title: (EM)^2
 #subtitle: (Electron Microscopy) x (Extreme Materials) 
 ---
@@ -80,6 +80,10 @@ body {
 <body>
 
 
+<h1>
+Electron Microscopy for Extreme Materials Lab<span class="wrap"></span>
+</h1>
+        
 <h1>
 <a href="" class="typewrite" data-period="2000" data-type='[ "Extreme Materials", "Electron Microscopy", "(EM)^2 Research Group"]'>
     <span class="wrap"></span>
