--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ var TxtType = function(el, toRotate, period) {
 
 <style>
 body {
-  background-color:DodgerBlue;
+  background-color:#404040;
   text-align: center;
   color:#fff;
   padding-top:10em;
