--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ body {
   text-align: center;
   color:#fff;
   padding-top:10em;
+  padding-top:20em;
 }
 
 
@@ -84,11 +85,11 @@ body {
 Electron Microscopy for Extreme Materials Lab<span class="wrap"></span>
 </h1>
         
-<h1>
+<h2>
 <a href="" class="typewrite" data-period="2000" data-type='[ "Extreme Materials", "Electron Microscopy", "(EM)^2 Research Group"]'>
     <span class="wrap"></span>
   </a>
-</h1>
+</h2>
 
 <p id="demo"></p>
 
