--- a/index.html
+++ b/index.html
@@ -71,8 +71,34 @@ body {
   text-align: center;
   color:#fff;
   padding-top:10em;
-  padding-top:20em;
 }
+
+h1 {
+  background-color: #none;
+  color: white;
+  max-width: 5000px;
+  font-family: sans-serif
+  margin: auto;
+}
+
+b {
+  background-color: #none;
+  color: white;
+  max-width: 5000px;
+  font-family: Arial
+  margin: auto;
+}
+
+a {
+  color: #2189ff;
+}
+
+c {
+  color: LightBlue;
+}
+
+
+</style>
 
 
 
@@ -80,16 +106,18 @@ body {
 
 <body>
 
+<h1>
+<b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2)<span class="wrap">
+</h1>
+<h1>Research Lab
+</h1>
+
 
 <h1>
-Electron Microscopy for Extreme Materials Lab<span class="wrap"></span>
-</h1>
-        
-<h2>
-<a href="" class="typewrite" data-period="2000" data-type='[ "Extreme Materials", "Electron Microscopy", "(EM)^2 Research Group"]'>
+<a href="" class="typewrite" data-period="2000" data-type='[ "In-situ TEM", "Extreme Environments", "Elastic Strain Engineering"]'>
     <span class="wrap"></span>
   </a>
-</h2>
+</h1>
 
 <p id="demo"></p>
 
