--- a/index.html
+++ b/index.html
@@ -71,33 +71,23 @@ body {
   text-align: center;
   color:#fff;
   padding-top:10em;
-  padding-bottom: 50px;
+  padding-bottom: 500px;
 }
 
 h1 {
   background-color: #none;
   color: white;
-  max-width: 5000px;
-  font-family: sans-serif
-  margin: auto;
 }
 
 b {
   background-color: #none;
   color: white;
-  max-width: 5000px;
-  font-family: Arial
-  margin: auto;
+  font-family: sans-serif
 }
 
 a {
   color: #2189ff;
 }
-
-c {
-  color: LightBlue;
-}
-
 
 </style>
 
@@ -107,10 +97,9 @@ c {
 
 <body>
 
-<h1>
-<b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2)<span class="wrap">
-</h1>
-<h1>Research Lab
+<h1><span class="wrap">
+<b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2) Research Lab 
+ </span>
 </h1>
 
 
