--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@ body {
   text-align: center;
   color:#fff;
   padding-top:10em;
-  padding-bottom: 500px;
 }
 
 h1 {
@@ -89,6 +88,9 @@ a {
   color: #2189ff;
 }
 
+div {
+  padding-bottom: 500px;
+}
 </style>
 
 
@@ -97,6 +99,7 @@ a {
 
 <body>
 
+<div>
 <h1><span class="wrap">
 <b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2) Research Lab 
  </span>
@@ -114,6 +117,7 @@ a {
         
  
  </h1>
+</div>
 <p id="demo"></p>
 
 
