--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ a {
 <b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2) Research Lab 
  </span>
 </h1>
-
+        
+<hr size="2" width="20%" color="white">
 
 <h1>
 <a href="" class="typewrite" data-period="2000" data-type='[ "In-situ TEM", "Extreme Environments", "Elastic Strain Engineering"]'>
