--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ h1 {
 
 b {
   background-color: #none;
-  color: white;
+  color: #2189ff;
   font-family: sans-serif
 }
 
@@ -103,7 +103,7 @@ a {
  </span>
 </h1>
 <br>    
-<hr size="2" width="20%" color="white">
+<hr size="5" width="36%" color="white">
 
 <h1>
 <a href="" class="typewrite" data-period="2000" data-type='[ "In-situ TEM", "Extreme Environments", "Elastic Strain Engineering"]'>
