--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ h1 {
 
 b {
   background-color: #none;
-  color: #2189ff;
-  font-family: sans-serif
+  color: white;
+  font-size: 52px;
 }
 
 a {
@@ -102,15 +102,14 @@ a {
 <b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2) Research Lab 
  </span>
 </h1>
-<br>    
+<p style="margin-bottom:10px;"></p>   
 <hr size="5" width="36%" color="white">
-
+<p style="margin-bottom:10px;"></p>   
 <h1>
 <a href="" class="typewrite" data-period="2000" data-type='[ "In-situ TEM", "Extreme Environments", "Elastic Strain Engineering"]'>
     <span class="wrap"></span>
   </a>
 </h1>
-<br>
 <br>
 <br>
 <br>
