--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ a {
 
 
 <h1><span class="wrap">
-<b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials ((EM)^2) Research Lab 
+<b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials Research Lab 
  </span>
 </h1>
 <p style="margin-bottom:10px;"></p>   
