--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@ b {
   color: white;
   font-size: 52px;
 }
+        
+c {
+  background-color: #none;
+  color: #EBEDEE;
+}
 
 a {
   color: #2189ff;
@@ -99,7 +104,7 @@ a {
 
 
 <h1><span class="wrap">
-<b>E</b>lectron <b>M</b>icroscopy for <b>E</b>xtreme <b>M</b>aterials Research Lab 
+<b>E</b>lectron <b>M</b>icroscopy <c>for</c> <b>E</b>xtreme <b>M</b>aterials Research Lab 
  </span>
 </h1>
 <p style="margin-bottom:10px;"></p>   
