--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ b {
         
 c {
   background-color: #none;
-  color: #EBEDEE;
+  color: #B8BBBB;
 }
 
 a {
@@ -104,8 +104,7 @@ a {
 
 
 <h1><span class="wrap">
-<b>E</b>lectron <b>M</b>icroscopy <c>for</c> <b>E</b>xtreme <b>M</b>aterials Research Lab 
- </span>
+<b>E</b>lectron <b>M</b>icroscopy <c>for</c> <b>E</b>xtreme <b>M</b>aterials <c>Research Lab</c></span>
 </h1>
 <p style="margin-bottom:10px;"></p>   
 <hr size="5" width="36%" color="white">
