--- a/Research.html
+++ b/Research.html
@@ -12,11 +12,11 @@ body {
 }
   
 div.gallery {
-  border: 1px solid #ccc;
+  border: 1px solid #404040;
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1px solid #FFFFFF;
 }
 
 div.gallery img {
@@ -61,9 +61,9 @@ div.desc {
 </head>
 <body>
 
-<h2>Responsive Image Gallery</h2>
-
-<h4>Resize the browser window to see the effect.</h4>
+* {
+  color: white
+}
 
 <div class="responsive">
   <div class="gallery">
