--- a/Research.html
+++ b/Research.html
@@ -31,12 +31,13 @@ div.desc {
 
 * {
   box-sizing: border-box;
+  color: white;
 }
 
 .responsive {
-  padding: 0 6px;
+  padding: 0 20px;
   float: left;
-  width: 24.99999%;
+  width: 33.333333%;
 }
 
 @media only screen and (max-width: 700px) {
@@ -61,9 +62,6 @@ div.desc {
 </head>
 <body>
 
-* {
-  color: white
-}
 
 <div class="responsive">
   <div class="gallery">
@@ -93,14 +91,6 @@ div.desc {
   </div>
 </div>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">Add a description of the image here</div>
-  </div>
-</div>
 
 <div class="clearfix"></div>
 
