--- a/Research.html
+++ b/Research.html
@@ -27,11 +27,11 @@ div.gallery img {
 div.desc {
   padding: 15px;
   text-align: center;
+  color: white;
 }
 
 * {
   box-sizing: border-box;
-  color: white;
 }
 
 .responsive {
@@ -68,7 +68,7 @@ div.desc {
     <a target="_blank" href="img_5terre.jpg">
       <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Imaging materials degradation at the nano/atomic scale</div>
   </div>
 </div>
 
@@ -78,7 +78,7 @@ div.desc {
     <a target="_blank" href="img_forest.jpg">
       <img src="img_forest.jpg" alt="Forest" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Elastic Strain Engineering (ESE)</div>
   </div>
 </div>
 
@@ -87,7 +87,7 @@ div.desc {
     <a target="_blank" href="img_lights.jpg">
       <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">Advanced modeling of radiation damage in solid</div>
   </div>
 </div>
 
