--- a/Research.html
+++ b/Research.html
@@ -68,7 +68,7 @@ div.desc {
     <a target="_blank" href="img_5terre.jpg">
       <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
-    <div class="desc">Imaging materials degradation at the nano/atomic scale</div>
+    <div class="desc">Advanced imaging of materials under extreme environments</div>
   </div>
 </div>
 
