--- a/Research.html
+++ b/Research.html
@@ -66,7 +66,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_5terre.jpg">
-      <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="oxidation.gif" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
     <div class="desc">Advanced imaging of materials under extreme environments</div>
   </div>
@@ -76,7 +76,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+      <img src="ESE.gif" alt="Elastic Strain Engineering" width="400" height="400">
     </a>
     <div class="desc">Elastic Strain Engineering (ESE)</div>
   </div>
@@ -85,7 +85,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+      <img src="img_lights.jpg" alt="Northern Lights" width="400" height="400">
     </a>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
   </div>
