--- a/Research.html
+++ b/Research.html
@@ -65,7 +65,7 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_5terre.jpg">
+    <a target="_blank" href="/assets/img/oxidation.gif">
       <img src="oxidation.gif" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
     <div class="desc">Advanced imaging of materials under extreme environments</div>
@@ -75,7 +75,7 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
+    <a target="_blank" href="/assets/img/ESE.gif">
       <img src="ESE.gif" alt="Elastic Strain Engineering" width="400" height="400">
     </a>
     <div class="desc">Elastic Strain Engineering (ESE)</div>
@@ -84,7 +84,7 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
+    <a target="_blank" href="/assets/img/bgimage.png">
       <img src="img_lights.jpg" alt="Northern Lights" width="400" height="400">
     </a>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
