--- a/Research.html
+++ b/Research.html
@@ -66,7 +66,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/oxidation.gif">
-      <img src="oxidation.gif" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
+      <img src="{{ 'assets/img/oxidation.gif' | relative_url }}" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
     <div class="desc">Advanced imaging of materials under extreme environments</div>
   </div>
@@ -76,7 +76,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/ESE.gif">
-      <img src="ESE.gif" alt="Elastic Strain Engineering" width="400" height="400">
+      <img src="{{ 'assets/img/ESE.gif' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
     </a>
     <div class="desc">Elastic Strain Engineering (ESE)</div>
   </div>
@@ -85,7 +85,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/bgimage.png">
-      <img src="img_lights.jpg" alt="Northern Lights" width="400" height="400">
+      <img src="{{ 'assets/img/ESE.gif' | relative_url }}" alt="Northern Lights" width="400" height="400">
     </a>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
   </div>
