--- a/Research.html
+++ b/Research.html
@@ -66,7 +66,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/oxidation.gif">
-      <img src="{{ 'assets/img/oxidation.gif' | relative_url }}" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
+      <img src="/assets/img/oxidation.gif" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
     <div class="desc">Advanced imaging of materials under extreme environments</div>
   </div>
