--- a/Research.html
+++ b/Research.html
@@ -84,8 +84,8 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="/assets/img/bgimage.png">
-      <img src="{{ 'assets/img/ESE.gif' | relative_url }}" alt="Northern Lights" width="400" height="400">
+    <a target="_blank" href="/assets/img/im3d.gif">
+      <img src="{{ 'assets/img/im3d.gif' | relative_url }}" alt="IM3D" width="400" height="400">
     </a>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
   </div>
