--- a/Research.html
+++ b/Research.html
@@ -116,7 +116,7 @@ div.desc {
 <p><img src="http://li.mit.edu/Archive/Papers/18/Yang18LiNanoscale-front.jpg" /></p>
 <p><a href="http://li.mit.edu/Archive/Papers/15/Li15YangSR-front.jpg"><img src="http://li.mit.edu/Archive/Papers/15/Li15YangSR-front.jpg" height="300" /></a></p>
 <p><strong>Official website of IM3D:</strong><br />
-<span style="color: #0000ff; font-size: 12pt;"><a style="color: #0000ff;" href="http://li.mit.edu/im3d/">http://li.mit.edu/im3d/</a></span></p>
+<span style="color: #0000ff; font-size: 12pt;"><a style="color: #687F7F;" href="http://li.mit.edu/im3d/">http://li.mit.edu/im3d/</a></span></p>
 <p><strong>Publications:</strong></p>
 <p>[7] <span style="font-size: 12pt;"><a href="https://www.sciencedirect.com/science/article/abs/pii/S2589152921000260">Effects of Recoil Spectra and Electronic Energy Dissipation on Defect Survival in 3C-SiC</a>, Lauren Nuckols, Miguel L. Crespillo, <strong>Yang Yang</strong>, Ju Li, Eva Zarkadoula, Yanwen Zhang and William J. Weber, <em>Materialia</em>, (2021) 101023.</span></p>
 <p><span style="font-size: 12pt;">[6] <a href="https://www.nature.com/articles/s41524-020-00438-9#Sec12">Sample spinning to mitigate polarization artifact and interstitial-vacancy imbalance in ion-beam irradiation</a>, Cui-Lan Ren, <strong>Yang Yang</strong>, Yong-Gang Li, Ping Huai, Zhi-Yuan Zhu &amp; Ju Li, <em>npj Computational Materials, (2020) 189</em></span></p>
