--- a/Research.html
+++ b/Research.html
@@ -67,7 +67,7 @@ div.desc {
 </head>
 <body>
 
-
+<p style="margin-bottom:10px;"></p> 
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/oxidation.gif">
