--- a/Research.html
+++ b/Research.html
@@ -6,12 +6,10 @@ title: Research
 <html>
 <head>
 <style>
-a:link {
-  color: #687F7F;
-}
+
 	
 body {
-  background-color: #404040
+  background-color: #FFFFFF
   
 }
   
@@ -32,7 +30,7 @@ div.desc {
   padding: 15px;
   text-align: center;
   color: white;
-  font-size: 1.125rem;
+  font-size: 0.8 rem;
 }
 
 * {
