--- a/Research.html
+++ b/Research.html
@@ -88,7 +88,8 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/ESE.gif">
-      <img src="{{ 'assets/img/ESE.gif' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
+      <img src="{{ 'assets/img/diamond.jpg' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
+      <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
     <div class="desc">Elastic Strain Engineering (ESE)</div>
   </div>
@@ -97,7 +98,8 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="/assets/img/im3d.gif">
-      <img src="{{ 'assets/img/im3d.gif' | relative_url }}" alt="IM3D" width="400" height="400">
+      <img src="{{ 'assets/img/im3d.jpg' | relative_url }}" alt="IM3D" width="400" height="400">
+      <img src="/assets/img/im3d.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">    
     </a>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
   </div>
