--- a/Research.html
+++ b/Research.html
@@ -19,7 +19,8 @@ div.gallery {
 
 div.gallery .img-hover {
   	display: none;
-        position: absolute;
+  	width: 100%;
+  	height: auto;
         top: 0;
         left: 0;
 }
