--- a/Research.html
+++ b/Research.html
@@ -21,6 +21,8 @@ div.gallery .img-hover {
   	display: none;
   	width: 100%;
   	height: auto;
+	top: 0;
+        left: 0;
 }
 	
 div.gallery:hover .img-hover {
