--- a/Research.html
+++ b/Research.html
@@ -19,7 +19,7 @@ div.gallery {
 
 div.gallery .img-hover {
   	display: none;
-	position: absolute;
+	position: relative;
   	width: 100%;
   	height: auto;
 	top: 0;
