--- a/Research.html
+++ b/Research.html
@@ -32,6 +32,8 @@ div.gallery:hover .img-hover {
 }
 
 div.gallery img {
+        position: relative;
+        display: inline-block;
   width: 100%;
   height: auto;
 }
