--- a/Research.html
+++ b/Research.html
@@ -19,7 +19,7 @@ div.gallery {
 
 div.gallery .img-hover {
   	display: none;
-	position: relative;
+	position: absolute;
 	top: 0;
         left: 0;
   	width: 100%;
