--- a/Research.html
+++ b/Research.html
@@ -94,20 +94,24 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
+   <div class="img">
     <a target="_blank" href="/assets/img/ESE.gif">
       <img src="{{ 'assets/img/diamond.jpg' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
       <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
+   </div>
     <div class="desc">Elastic Strain Engineering (ESE)</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
+   <div class="img">
     <a target="_blank" href="/assets/img/im3d.gif">
       <img src="{{ 'assets/img/im3d.jpg' | relative_url }}" alt="IM3D" width="400" height="400">
       <img src="/assets/img/im3d.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">    
     </a>
+    </div>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
   </div>
 </div>
