--- a/Research.html
+++ b/Research.html
@@ -87,7 +87,7 @@ div.desc {
       <img src="/assets/img/oxidation.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc">Advanced imaging of materials under extreme environments aaa</div>
+    <div class="desc">Advanced imaging of materials under extreme environments</div>
   </div>
 </div>
 
