--- a/Research.html
+++ b/Research.html
@@ -18,7 +18,10 @@ div.gallery {
 }
 
 div.img {
-
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: auto;
 }
 	
 div.img .img-hover {
@@ -32,7 +35,7 @@ div.img .img-hover {
 }
 	
 div.gallery:hover .img-hover {
-  	display: inline;
+  	display: inline-block;
 }
 
 div.desc {
