--- a/Research.html
+++ b/Research.html
@@ -82,7 +82,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
    <div class="img">
-    <a target="_blank" href="/assets/img/oxidation.gif">
+    <a target="_blank" href="/Extreme-environments">
       <img src="/assets/img/In-situ1.jpg" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
       <img src="/assets/img/oxidation.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
@@ -95,21 +95,21 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
    <div class="img">
-    <a target="_blank" href="/assets/img/ESE.gif">
+    <a target="_blank" href="/Extreme-materials">
       <img src="{{ 'assets/img/diamond.jpg' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
       <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc">Elastic Strain Engineering (ESE)</div>
+    <div class="desc">Elastic Strain Engineering (ESE) for extreme performance</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
    <div class="img">
-    <a target="_blank" href="/assets/img/im3d.gif">
+    <a target="_blank" href="/Advanced-modeling">
       <img src="{{ 'assets/img/im3d.jpg' | relative_url }}" alt="IM3D" width="400" height="400">
-      <img src="/assets/img/im3d.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">    
+      <img src="/assets/img/im3d.gif" class="img-hover" alt="IM3D" width="400" height="400">    
     </a>
     </div>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
