--- a/Research.html
+++ b/Research.html
@@ -21,7 +21,7 @@ div.img {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: auto;
+  height: 10%;
 }
 	
 div.img .img-hover {
