--- a/Research.html
+++ b/Research.html
@@ -16,9 +16,14 @@ body {
 div.gallery {
 
 }
-
+	
+div.gallery img {
+  width: 100%;
+  height: auto; 
+}
+	
 div.img {
-  position: relative;
+  position: auto;
   display: inline-block;
   width: 100%;
   height: 10%;
