--- a/Research.html
+++ b/Research.html
@@ -102,6 +102,7 @@ div.desc {
    <div class="img">
     <a target="_blank" href="/Extreme-materials">
       <img src="{{ 'assets/img/diamond.jpg' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
+    <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
     <div class="desc">Elastic Strain Engineering (ESE) for extreme performance</div>
@@ -113,6 +114,7 @@ div.desc {
    <div class="img">
     <a target="_blank" href="/Advanced-modeling">
       <img src="{{ 'assets/img/im3d.jpg' | relative_url }}" alt="IM3D" width="400" height="400"> 
+      <img src="/assets/img/im3d.gif" class="img-hover" alt="IM3D" width="400" height="400">
     </a>
     </div>
     <div class="desc">Advanced modeling of radiation damage in solid</div>
