--- a/Research.html
+++ b/Research.html
@@ -112,7 +112,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
    <div class="hj">
-    <a target="_blank" href="/Advanced-modeling">
+    <a target="_blank" href="/Modeling">
       <img src="{{ 'assets/img/im3d.jpg' | relative_url }}" alt="IM3D" width="400" height="400"> 
       <img src="/assets/img/im3d.gif" class="img-hover" alt="IM3D" width="400" height="400">
     </a>
