--- a/Research.html
+++ b/Research.html
@@ -92,7 +92,7 @@ div.desc {
       <img src="/assets/img/oxidation.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc">Advanced imaging of materials under extreme environments</div>
+    <div class="desc"><a target="_blank" href="/Extreme-environments">Advanced imaging of materials under extreme environments</a></div>
   </div>
 </div>
 
@@ -105,7 +105,7 @@ div.desc {
     <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc">Elastic Strain Engineering (ESE) for extreme performance</div>
+    <div class="desc"><a target="_blank" href="/Extreme-materials">Elastic Strain Engineering (ESE) for extreme performance</a></div>
   </div>
 </div>
 
@@ -117,7 +117,7 @@ div.desc {
       <img src="/assets/img/im3d.gif" class="img-hover" alt="IM3D" width="400" height="400">
     </a>
     </div>
-    <div class="desc">Advanced modeling of radiation damage in solid</div>
+    <div class="desc"><a target="_blank" href="/Modeling">Advanced modeling of radiation damage in solid</a></div>
   </div>
 </div>
 
