--- a/Research.html
+++ b/Research.html
@@ -11,6 +11,9 @@ full-width: true
 	
 body {
   background-color: #FFFFFF
+}
+	
+div.ma {
   margin-right: 15%;
   margin-left: 15%;
 }
@@ -84,7 +87,7 @@ div.desc {
 </style>
 </head>
 <body>
-
+<div class="ma">
 <p style="margin-bottom:10px;"></p> 
 <div class="responsive">
   <div class="gallery">
@@ -131,6 +134,6 @@ div.desc {
 <p style="margin-bottom:30px;"></p> 
 
 
-  
+</div>  
 </body>
 </html>
