--- a/Research.html
+++ b/Research.html
@@ -53,7 +53,7 @@ div.desc {
   text-align: center;
   vertical-align: middle;	
   color: "#404040";
-  font-size: 1.32rem;
+  font-size: 1.22rem;
 }
 
 * {
@@ -97,7 +97,7 @@ div.desc {
       <img src="/assets/img/oxidation.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc"><a target="_blank" href="/Extreme-environments">Advanced imaging of materials under extreme environments</a></div>
+    <div class="desc"><a color=#404040 target="_blank" href="/Extreme-environments">Advanced imaging of materials under extreme environments</a></div>
   </div>
 </div>
 
@@ -110,7 +110,7 @@ div.desc {
     <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc"><a target="_blank" href="/Extreme-materials">Elastic Strain Engineering (ESE) for extreme performance</a></div>
+    <div class="desc"><a color=#404040  target="_blank" href="/Extreme-materials">Elastic Strain Engineering (ESE) for extreme performance</a></div>
   </div>
 </div>
 
@@ -122,7 +122,7 @@ div.desc {
       <img src="/assets/img/im3d.gif" class="img-hover" alt="IM3D" width="400" height="400">
     </a>
     </div>
-    <div class="desc"><a target="_blank" href="/Modeling">Advanced modeling of radiation damage in solid</a></div>
+    <div class="desc"><a color=#404040 target="_blank" href="/Modeling">Advanced modeling of radiation damage in solid</a></div>
   </div>
 </div>
 
