--- a/Research.html
+++ b/Research.html
@@ -85,9 +85,24 @@ div.desc {
   display: table;
   clear: both;
 }
+
+.header {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: left;
+}
+
 </style>
 </head>
 <body>
+<div class="About">
+  <h1>Header</h1>
+  <p>Our research aims to leverage advanced electron microscopy and modeling to provide revealing mechanistic understanding in extreme materials, which includes materials under extreme enviornments, and materials with extreme performance. </p>
+</div>
+
+<hr size="10" width="70%" color="white">
+<p style="margin-bottom:30px;"></p> 
+
 <div class="ma">
 <p style="margin-bottom:10px;"></p> 
 <div class="responsive">
