--- a/Research.html
+++ b/Research.html
@@ -87,16 +87,18 @@ div.desc {
 }
 
 .header {
+  margin-right: 20%;
+  margin-left: 20%;
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 10px;
   text-align: left;
 }
 
 </style>
 </head>
 <body>
-<div class="About">
-  <h1>Header</h1>
+<div class="header">
+  <h2>About</h2>
   <p>Our research aims to leverage advanced electron microscopy and modeling to provide revealing mechanistic understanding in extreme materials, which includes materials under extreme enviornments, and materials with extreme performance. </p>
 </div>
 
