--- a/Research.html
+++ b/Research.html
@@ -87,9 +87,8 @@ div.desc {
 }
 
 .header {
-  margin-right: 22%;
-  margin-left: 22%;
-
+  margin-right: 20%;
+  margin-left: 20%;
   padding: 10px;
   text-align: left;
 }
@@ -99,7 +98,8 @@ div.desc {
 <body>
 <div class="header">
   <h2>About</h2>
-  <p>Our research aims to leverage advanced electron microscopy and modeling to provide revealing mechanistic understanding in extreme materials, which includes materials under extreme enviornments, and materials with extreme performance. </p>
+  <p>Our research focuses on the integration of advanced electron microscopy and advanced modeling to provide revealing mechanistic insights into extreme materials, which includes materials under extreme enviornments, and materials with extreme performance. Further, we aim to leverage these fundamental understandings to enable materials with extrodinary properties to significantly enhance the feasibility and reliability of next-generation energy and transportation systems.</p>
+  <hr size="10" width="70%" color="white">
 </div>
 
 
