--- a/Team.html
+++ b/Team.html
@@ -87,8 +87,8 @@ div.desc {
 }
 
 .header {
-  margin-right: 19.5%;
-  margin-left: 20.6%;
+  margin-right: 20%;
+  margin-left: 20.3%;
   padding: 10px;
   text-align: left;
 }
@@ -98,7 +98,7 @@ div.desc {
 <body>
 <div class="header">
   <h2>About</h2>
-  <p>Our research focuses on the integration of advanced electron microscopy and advanced modeling to provide revealing mechanistic insights into  <b>extreme materials</b>, which includes materials under extreme enviornments, and materials with extreme performance. Further, we aim to leverage these fundamental understandings to enable materials with extrodinary properties, that may significantly enhance the feasibility and reliability of next-generation energy and transportation systems.</p>
+  <p>Our research focuses on the integration of advanced electron microscopy and advanced modeling to provide revealing mechanistic insights into  <b>extreme materials</b>, which includes materials under extreme enviornments, and materials with extreme performance. Further, we aim to leverage these fundamental understandings to enable materials with extrodinary properties to significantly enhance the feasibility and reliability of next-generation energy and transportation systems.</p>
   <hr size="10" width="70%" color="white">
 </div>
 
