--- a/Team.html
+++ b/Team.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Research
-cover-img: /assets/img/4.jpg
+title: Team
+cover-img: /assets/img/5.jpg
 full-width: true
 ---
 
@@ -27,6 +27,8 @@ div.gallery img {
   width: 100%;
   height: auto; 
   display: inline-block;
+  border-radius: 50%;
+
 }
 	
 div.hj {
