--- a/Team.html
+++ b/Team.html
@@ -27,6 +27,7 @@ div.gallery img {
   height: auto; 
   display: inline-block;
   border-radius: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 	
