--- a/Team.html
+++ b/Team.html
@@ -65,8 +65,8 @@ div.desc {
 
 .responsive {
   padding: 0 20px;
-  float: left;
-  width: 33.333333%;
+  float: center;
+  width: 49.99999%;
 }
 
 @media only screen and (max-width: 700px) {
@@ -98,7 +98,6 @@ div.desc {
 <body>
 <div class="header">
   <h2>Principle Investigator (PI)</h2>
-  <hr size="10" width="70%" color=#404040>
 </div>
 
 
