--- a/Team.html
+++ b/Team.html
@@ -107,11 +107,11 @@ div.desc {
   <div class="gallery">
    <div class="hj">
     <a target="_blank" href="/Extreme-environments">
-      <img src="/assets/img/In-situ1.jpg" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
+      <img src="/assets/img/YangYang.jpg" alt="Yang Yang" width="400" height="400">
       <img src="/assets/img/oxidation.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
     </a>
    </div>
-    <div class="desc"><a style="color: #404040;" target="_blank" href="/Extreme-environments">Advanced imaging of materials under extreme environments</a></div>
+    <div class="desc"><a style="color: #404040;" target="_blank" href="/Extreme-environments">Prof. Yang Yang</a></div>
   </div>
 </div>
 
