--- a/Team.html
+++ b/Team.html
@@ -117,13 +117,12 @@ div.desc {
 
 
 <div class="responsive">
-  <div class="gallery">
-   <div class="hj">
-    <a target="_blank" href="/Extreme-materials">
-      <img src="{{ 'assets/img/diamond.jpg' | relative_url }}" alt="Elastic Strain Engineering" width="400" height="400">
-    <img src="/assets/img/ESE.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
-    </a>
-   </div>
+  <div class="bio">
+    <h3>Prof. Yang Yang</h3>
+    <h4>Assistant Professor</h4>
+    <h4>Department of Engineering Science and Mechanics & Materials Research Institute</h4>
+    <h4>The Pennsylvania State University</h4>
+
     <div class="desc"><a style="color: #404040;" target="_blank" href="/Extreme-materials">Elastic Strain Engineering (ESE) for extreme performance</a></div>
   </div>
 </div>
