--- a/Team.html
+++ b/Team.html
@@ -108,7 +108,7 @@ div.desc {
    <div class="hj">
     <a target="_blank" href="/Extreme-environments">
       <img src="/assets/img/YangYang.jpg" alt="Yang Yang" width="400" height="400">
-      <img src="/assets/img/oxidation.gif" class="img-hover" alt="Oxidation of Ni-Fe nanoparticles" width="400" height="400">
+      <img src="/assets/img/oxidation.gif" class="img-hover" alt="Yang Yang" width="400" height="400">
     </a>
    </div>
   </div>
@@ -117,10 +117,10 @@ div.desc {
 
 <div class="responsive">
   <div class="bio">
-    <h3>Prof. Yang Yang</h3>
-    <h4>Assistant Professor</h4>
-    <h4>Department of Engineering Science and Mechanics & Materials Research Institute</h4>
-    <h4>The Pennsylvania State University</h4>
+    <h4>Prof. Yang Yang</h4>
+    <h5>Assistant Professor</h5>
+    <h5>Department of Engineering Science and Mechanics & Materials Research Institute</h45
+    <h5>The Pennsylvania State University</h5>
 
     <div class="desc"><a style="color: #404040;" target="_blank" href="/Extreme-materials">Elastic Strain Engineering (ESE) for extreme performance</a></div>
   </div>
