--- a/Team.html
+++ b/Team.html
@@ -121,8 +121,8 @@ div.desc {
   <div class="column middle">
     <h3>Prof. Yang Yang</h3>
     <h4>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute, The Pennsylvania State University</h4>
-    <p>Email: yang@psu.edu
-       Office Phone: +1-814-865-5070
+    <p>Email: yang[at]psu.edu
+       Phone: +1-814-865-5070
        Office: N243, Millennium Science Complex</p>
   </div>
 </div>
