--- a/Team.html
+++ b/Team.html
@@ -125,6 +125,10 @@ div.desc {
        Phone: +1-814-865-5070
        Office: N243, Millennium Science Complex</p>
   </div>
+
+  <div class="column middle">
+    <p><b>Short Bio: </b>Dr. Yang joined in the Department of Engineering Science and Mechanics (ESM) and the Materials Research Institute (MRI) of the Pennsylvania State University (University Park, USA) in June 2021 as an assistant professor. Dr. Yang conducted postdoc research at National Center for Electron Microscopy (NCEM) in Lawrence Berkeley National Laboratory between Jan 2019 -May 2021. He received a Ph.D. degree from the Department of Nuclear Science and Engineering at MIT. During his Ph.D. study, he was a visiting student at the Center for Functional Nanomaterials (CFN) at Brookhaven National Laboratory for more than two years to conduct in-situ environmental transmission electron microscopy studies. </p>
+  </div>
 </div>
 
 
