--- a/Team.html
+++ b/Team.html
@@ -119,10 +119,10 @@ div.desc {
   </div>
   
   <div class="column middle">
-    <h3>Prof. Yang Yang</h3>
-    <h4>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute, The Pennsylvania State University</h4>
-    <p>Email: yang[at]psu.edu
-       Phone: +1-814-865-5070
+    <h4>Prof. Yang Yang</h4>
+    <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University</p>
+    <p>Email: yang[at]psu.edu<br>
+       Phone: +1-814-865-5070<br>
        Office: N243, Millennium Science Complex</p>
   </div>
 
