--- a/Team.html
+++ b/Team.html
@@ -29,6 +29,10 @@ body {
   width: 70%;
 }
 
+.column.bio {
+  width: 100%;
+}
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -126,23 +130,13 @@ div.desc {
        Office: N243, Millennium Science Complex</p>
   </div>
 
-  <div class="column middle">
+  <div class="column bio">
     <p><b>Short Bio: </b>Dr. Yang joined in the Department of Engineering Science and Mechanics (ESM) and the Materials Research Institute (MRI) of the Pennsylvania State University (University Park, USA) in June 2021 as an assistant professor. Dr. Yang conducted postdoc research at National Center for Electron Microscopy (NCEM) in Lawrence Berkeley National Laboratory between Jan 2019 -May 2021. He received a Ph.D. degree from the Department of Nuclear Science and Engineering at MIT. During his Ph.D. study, he was a visiting student at the Center for Functional Nanomaterials (CFN) at Brookhaven National Laboratory for more than two years to conduct in-situ environmental transmission electron microscopy studies. </p>
   </div>
 </div>
 
 
 
-<div class="responsive">
-  <div class="bio">
-    <h4>Prof. Yang Yang</h4>
-    <h5>Assistant Professor</h5>
-    <h5>Department of Engineering Science and Mechanics & Materials Research Institute</h45
-    <h5>The Pennsylvania State University</h5>
-
-    <div class="desc"><a style="color: #404040;" target="_blank" href="/Extreme-materials">Elastic Strain Engineering (ESE) for extreme performance</a></div>
-  </div>
-</div>
 
 
 <div class="clearfix"></div>
