--- a/Team.html
+++ b/Team.html
@@ -99,6 +99,14 @@ div.desc {
   text-align: center;
 }
 
+name {
+  text-align: center;
+  color: "#404040";
+  font-size: 1rem;
+  padding:  0px;
+  margine: 0px;
+}
+
 </style>
 </head>
 <body>
@@ -123,7 +131,7 @@ div.desc {
   </div>
   
   <div class="column middle">
-    <h4>Prof. Yang Yang</h4>
+    <name>Prof. Yang Yang</name>
     <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University</p>
     <p>Email: yang[at]psu.edu<br>
        Phone: +1-814-865-5070<br>
