--- a/Team.html
+++ b/Team.html
@@ -103,9 +103,11 @@ div.desc {
 name {
   text-align: center;
   color: "#404040";
-  font-size: 1rem;
+  font-size: 1.2rem;
   padding:  0px;
   margine: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 </style>
