--- a/Team.html
+++ b/Team.html
@@ -101,13 +101,15 @@ div.desc {
 }
 
 name {
-  text-align: center;
+  text-align: left;
   color: "#404040";
   font-size: 1.2rem;
   padding:  0px;
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 800;
+  line-height: 1;
 }
 
 </style>
