--- a/Team.html
+++ b/Team.html
@@ -112,6 +112,12 @@ name {
   line-height: 1;
 }
 
+p {
+  padding:  0px;
+  margin: 0px;
+  font-size: 1rem;
+}
+
 </style>
 </head>
 <body>
@@ -136,8 +142,7 @@ name {
   </div>
   
   <div class="column middle">
-    <name>Prof. Yang Yang</name>
-    <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University</p>
+    <name>Prof. Yang Yang</name><br><p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University</p>
     <p>Email: yang[at]psu.edu<br>
        Phone: +1-814-865-5070<br>
        Office: N243, Millennium Science Complex</p>
