--- a/Team.html
+++ b/Team.html
@@ -146,7 +146,8 @@ p {
     <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University<br></p>
     <p>Email: yang[at]psu.edu<br>
        Phone: +1-814-865-5070<br>
-       Office: N243, Millennium Science Complex</p>
+       Office: N243, Millennium Science Complex<br>
+       <a href="https://linkedin.com/in/yang-yang-823181129">LinkedIn</a> | <a href="http://yang.mit.edu">Personal Website</a></p>
   </div>
 
   <div class="column bio">
