--- a/Team.html
+++ b/Team.html
@@ -143,7 +143,8 @@ p {
   
   <div class="column middle">
     <name>Prof. Yang Yang</name>
-    <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University<br></p>
+    <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute,<br>The Pennsylvania State University</p>
+    <p style="margin-bottom:10px;"></p> 
     <p>Email: yang[at]psu.edu<br>
        Phone: +1-814-865-5070<br>
        Office: N243, Millennium Science Complex<br>
