--- a/Team.html
+++ b/Team.html
@@ -106,11 +106,18 @@ name {
   font-size: 1.2rem;
   padding:  0px;
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
   line-height: 1;
 }
+
+des {
+  padding:  0px;
+  margin: 0px;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+}
+
 
 p {
   padding:  0px;
