--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a {
 <hr size="5" width="36%" color="white">
 <p style="margin-bottom:10px;"></p>   
 <h1>
-<a href="/" class="typewrite" data-period="2000" data-type='[ "In-situ TEM", "Extreme Environments", "Elastic Strain Engineering"]'>
+<a href="/Research" class="typewrite" data-period="2000" data-type='[ "In-situ TEM", "Extreme Environments", "Elastic Strain Engineering"]'>
     <span class="wrap"></span>
   </a>
 </h1>
