--- a/Research.html
+++ b/Research.html
@@ -80,6 +80,13 @@ div.desc {
   }
 }
 
+@media screen and (max-width: 700px) {
+  .header {
+    margin-right: 5%;
+    margin-left: 5%; 
+  }
+}
+
 .clearfix:after {
   content: "";
   display: table;
