--- a/Research.html
+++ b/Research.html
@@ -78,12 +78,14 @@ div.desc {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
+    padding-bottom: 10px;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .responsive {
     width: 100%;
+    padding-bottom: 10px;
   }
 }
 
