--- a/Research.html
+++ b/Research.html
@@ -94,6 +94,11 @@ div.desc {
     margin-right: 2%;
     margin-left: 2%; 
   }
+
+  .ma {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
 }
 
 .clearfix:after {
