--- a/Team.html
+++ b/Team.html
@@ -136,6 +136,7 @@ p {
 <body>
 <div class="header">
   <h2>Principle Investigator (PI)</h2>
+  <p style="margin-bottom:20px;"></p> 
 </div>
 
 <div class="row">
