--- a/Team.html
+++ b/Team.html
@@ -196,8 +196,9 @@ p {
     <p>Research projects: In-situ TEM, Nano-mechancis</p>
     <p style="margin-bottom:10px;"></p> 
     <p>Email: yinghan[at]psu.edu<br>
-       Office: Millennium Science Complex<br>
+       Office: Millennium Science Complex<br></p>
   </div>
+</div>
 
 
 
